Publicando projeto para GitHub Pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         text-align: center;
         margin-top: 20px;
         font-size: 1.8rem;
-        color: #007bff;
+        color: #f700ff;
     }
     .projects-container {
         margin: 40px auto;
@@ -44,14 +44,14 @@
         color: #555;
     }
     .project-link {
-        color: #007bff;
+        color: #f700ff;
         text-decoration: none;
         font-weight: bold;
         font-size: 1rem;
     }
     .project-link:hover {
         text-decoration: underline;
-        color: #0056b3;
+        color: #f700ff;
     }
 </style>
 </head>
@@ -62,14 +62,14 @@
     <h2 class="text-center">Meus Projetos</h2>
 
     <div class="project-item">
-        <div class="project-title">Projeto 1</div>
-        <div class="project-description">Descrição do Projeto 1</div>
+        <div class="project-title">Projeto 1 : Piloto</div>
+        
         <a href="https://piloto-ten.vercel.app/" class="project-link" target="_blank">Acessar Projeto</a>
     </div>
 
     <div class="project-item">
         <div class="project-title">Projeto 2</div>
-        <div class="project-description">Descrição do Projeto 2</div>
+        
         <a href="#" class="project-link" target="_blank">Acessar Projeto</a>
     </div>
 
