--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="project-item">
         <div class="project-title">Projeto 2</div>
         
-        <a href="#" class="project-link" target="_blank">Acessar Projeto</a>
+        <a href="#" class="https://cadweb-zeta.vercel.app/" target="_blank">Acessar Projeto</a>
     </div>
 
     
